# todoist-telegram-integration-bot

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
winged_scapula_span_bot/: bot.py  filters.py
winged_scapula_span_bot/helper/: todoist.py  utils.py
