[tool.poetry]
name = "winged-scapula-span-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "winged_scapula_span_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
todoist-api-python = "^v2.0.0"
python-telegram-bot = "^20.0.0"
hydra-core = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
responses = "^0.22.0"
pytest-asyncio = "^0.20.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
